--- a/task1/Login Landing page.html
+++ b/task1/Login Landing page.html
@@ -94,10 +94,10 @@
                 <div class="login-card">
                     <h2>Welcome back</h2>
                     <p>Please login to your account</p>
-                    <form action="#" class="form">
+                    <form id="loginForm" class="form">
                         <input type="email" class="form-control" placeholder="Enter Email">
                         <input type="password" class="form-control" placeholder="Enter Password">
-                        <button type="submit" class="btn btn-primary w-100">Sign in</button>
+                        <a href="success.html" class="btn btn-primary w-100">Sign in</a>
                         <button type="submit" class="btn btn-social w-100">
                             <i class="bi bi-apple"></i> Log in with Apple
                         </button>
@@ -105,7 +105,7 @@
                             <img src="/img/google.png" alt=""> Log in with Google
                         </button>
                     </form>
-                    <p class="signup">Don't have an account? <a href="#" class="text-decoration-none">Sign up now</a></p>
+                    <p class="signup">Don't have an account? <a href="success.html" class="text-decoration-none">Sign up now</a></p>
                 </div>
             </div>
             <div class="col-lg-5 p-0">
